# task_1_2_3

./: .gitignore  SampleGloria_Link_PmidOa.parquet  SampleGloria_Pat_GlinerLabels.parquet  SampleGloria_Pmed_GlinerLabels.parquet  pyproject.toml  readme.md  task1.ipynb  task2.ipynb  task2_deliverable.md  task2_report.md  task3.html  task3.ipynb  task3_deliverable.md  task3_results.md
deliverables/: task2_20260323_deliverable.md  task2_deliverable.md  task3_20260323_deliverable.md  task3_deliverable.md
notebooks/: task1.ipynb  task1_20260323.ipynb  task2.ipynb  task2_20260323.ipynb  task3.ipynb  task3_20260323.ipynb
output/: focal_terms_20260323.parquet
output_dataset/: cosine_similarity_results.parquet  focal_term_context.parquet  focal_terms.parquet
