[project]
name = "hiwi"
version = "0.1.0"
description = ""
authors = [
    {name = "gloriagalasso",email = "152806431+gloriagalasso@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
